view appointments UI 1 (unlinked to its corresponding tab)

--- a/app/src/main/res/layout/activity_d_patient_details.xml
+++ b/app/src/main/res/layout/activity_d_patient_details.xml
@@ -39,7 +39,7 @@
         android:textColor="@android:color/black"/>
 
     <TextView
-        android:id="@+id/nameText"
+        android:id="@+id/dateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -66,11 +66,11 @@
         android:textColor="@android:color/black"/>
 
     <TextView
-        android:id="@+id/idText"
+        android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/nameText"
+        android:layout_below="@+id/dateText"
         android:textSize="18sp"
         android:textColor="@android:color/black"/>
     </LinearLayout>
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_below="@+id/nameText"
+            android:layout_below="@+id/dateText"
             android:textSize="18sp"
             android:textColor="@android:color/black"/>
     </LinearLayout>
