--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -73,7 +73,7 @@
                     android:textColor="@android:color/black"/>
 
                 <TextView
-                    android:id="@+id/nameText"
+                    android:id="@+id/dateText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
@@ -101,11 +101,11 @@
                     android:textColor="@android:color/black"/>
 
                 <TextView
-                    android:id="@+id/idText"
+                    android:id="@+id/statusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_below="@+id/nameText"
+                    android:layout_below="@+id/dateText"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
             </LinearLayout>
@@ -133,7 +133,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_below="@+id/nameText"
+                    android:layout_below="@+id/dateText"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
             </LinearLayout>
@@ -161,7 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_below="@+id/nameText"
+                    android:layout_below="@+id/dateText"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
             </LinearLayout>
@@ -197,7 +197,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_below="@+id/nameText"
+                    android:layout_below="@+id/dateText"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
             </LinearLayout>
@@ -225,7 +225,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_below="@+id/nameText"
+                    android:layout_below="@+id/dateText"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
             </LinearLayout>
