--- a/app/src/main/res/layout/dinfo_list_item.xml
+++ b/app/src/main/res/layout/dinfo_list_item.xml
@@ -21,17 +21,17 @@
             android:textSize="26sp"
             android:textStyle="bold"
             android:layout_alignParentTop="true"
-            android:id="@+id/nameText"/>
+            android:id="@+id/dateText"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Experience"
             android:textSize="18sp"
-            android:layout_below="@id/nameText"
+            android:layout_below="@id/dateText"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:id="@+id/idText"/>
+            android:id="@+id/statusText"/>
 
     </RelativeLayout>
 
