view appointments UI 1 (unlinked to its corresponding tab)

--- a/app/src/main/res/layout/appt_item.xml
+++ b/app/src/main/res/layout/appt_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:ignore="MissingClass">
+    tools:ignore="MissingClass"
+    >
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,27 +13,38 @@
         android:layout_margin="0dp"
         android:background="@drawable/border_set_patient_list">
 
-        <!-- This is where the Appointment date and status will be -->
+        <!-- This is where the doctor name will be -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textColor="@android:color/black"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:id="@+id/nameText"/>
+
         <TextView
             android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:text="Date"
-            android:textColor="@android:color/black"
-            android:textSize="26sp"
-            android:textStyle="bold" />
+            android:layout_below="@id/nameText"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:text="date"
+            android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/statusText"
+            android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/dateText"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:text="Status"
+            android:text="time"
             android:textSize="18sp" />
 
     </RelativeLayout>
+
 
 </androidx.cardview.widget.CardView>
