--- a/app/src/main/res/layout/activity_pending_bookings.xml
+++ b/app/src/main/res/layout/activity_pending_bookings.xml
@@ -22,16 +22,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="2dp"
+        android:layout_height="655dp"
         android:layout_below="@+id/titleText"
+        android:padding="2dp"
         android:scrollbars="vertical" />
 
     <TextView
         android:id="@+id/testView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recyclerView"
-        android:textSize="16sp"/>
+        android:text=""
+        android:textSize="16sp" />
 
 </RelativeLayout>
