--- a/app/src/main/res/layout/activity_patient_consultation_history.xml
+++ b/app/src/main/res/layout/activity_patient_consultation_history.xml
@@ -14,7 +14,7 @@
             android:id="@+id/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Patient List"
+            android:text="Appointments"
             android:textStyle="bold"
             android:textAlignment="center"
             android:gravity="center_horizontal"
