--- a/app/src/main/res/layout/appt_item.xml
+++ b/app/src/main/res/layout/appt_item.xml
@@ -25,6 +25,20 @@
             android:id="@+id/nameText"/>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Statusy"
+            android:textSize="22sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="12dp"
+            android:textStyle="bold"
+            android:id="@+id/statusText"
+            android:gravity="center"
+            android:background="@drawable/rounded_corner_pending"
+            android:textColor="#f00"/>
+
+        <TextView
             android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
