--- a/app/src/main/res/layout/activity_pending_bookings.xml
+++ b/app/src/main/res/layout/activity_pending_bookings.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bookings List"
+        android:text="Booking Requests"
         android:textStyle="bold"
         android:textAlignment="center"
         android:gravity="center_horizontal"
