--- a/app/src/main/res/layout/activity_patient_consultation_history.xml
+++ b/app/src/main/res/layout/activity_patient_consultation_history.xml
@@ -33,10 +33,13 @@
             android:scrollbars="vertical" />
 
         <TextView
-            android:id="@+id/testView"
+            android:id="@+id/testView111"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/recyclerView"
+            android:text="Test"
+            android:layout_marginTop="4dp"
+            android:elevation="10dp"
             android:textSize="16sp"/>
 
     </RelativeLayout>
