--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -15,69 +15,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/booking_date"
+        <ExpandableListView
+            android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/datePicker"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Date" />
-
-        <TextView
-            android:id="@+id/booking_time"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/booking_date"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Time" />
-
-        <TextView
-            android:id="@+id/booking_patient"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/booking_time"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Patient" />
-
-        <TextView
-            android:id="@+id/patientID"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/booking_patient"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:hint="Patient ID" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/datePicker">
+        </ExpandableListView>
 
     </RelativeLayout>
 </FrameLayout>
