--- a/app/src/main/res/layout/activity_p_home_page.xml
+++ b/app/src/main/res/layout/activity_p_home_page.xml
@@ -15,69 +15,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/bookingDate"
+        <ExpandableListView
+            android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/datePicker"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Date" />
-
-        <TextView
-            android:id="@+id/bookingTime"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/bookingDate"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Time" />
-
-        <TextView
-            android:id="@+id/bookingDoc"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/bookingTime"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp"
-            android:hint="Doctor" />
-
-        <TextView
-            android:id="@+id/docID"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/bookingDoc"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:hint="Doctor ID" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/datePicker">
+        </ExpandableListView>
 
     </RelativeLayout>
 </FrameLayout>
