--- a/app/src/main/res/layout/activity_d_patient_list.xml
+++ b/app/src/main/res/layout/activity_d_patient_list.xml
@@ -73,5 +73,21 @@
             android:layout_below="@+id/recyclerView"
             android:textSize="16sp" />
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/dpl_past_consults"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_alignBottom="@+id/testView"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom|right"
+            android:layout_marginEnd="51dp"
+            android:layout_marginRight="51dp"
+            android:layout_marginBottom="77dp"
+            android:background="@drawable/rounded_corner_red"
+            android:gravity="center"
+            android:text="Past Consults"
+            android:textColor="#FFFFFF" />
+
     </RelativeLayout>
 </FrameLayout>
