--- a/app/src/main/res/layout/activity_d_patient_details.xml
+++ b/app/src/main/res/layout/activity_d_patient_details.xml
@@ -397,18 +397,34 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/extFloatingActionButton"
+        android:id="@+id/dpl_past_consults"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="#ff7b75"
         android:text="Past Consults"
         android:textColor="@android:color/white"
         app:icon="@drawable/circle"
         app:iconTint="@android:color/white" />
+
+<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--        android:id="@+id/dpl_past_consults"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_alignBottom="@+id/testView"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_gravity="bottom|right"-->
+<!--        android:layout_marginEnd="51dp"-->
+<!--        android:layout_marginRight="51dp"-->
+<!--        android:layout_marginBottom="77dp"-->
+<!--        android:background="@drawable/rounded_corner_red"-->
+<!--        android:gravity="center"-->
+<!--        android:text="Past Consults"-->
+<!--        android:textColor="#FFFFFF" />-->
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
