--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -23,4 +23,16 @@
         </ExpandableListView>
 
     </RelativeLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:id="@+id/newCForm"
+        android:src="@drawable/ic_baseline_add_24"
+        app:fabSize="normal"
+        app:elevation="6dp"
+        android:backgroundTint="@color/colorPrimary"/>
+
 </FrameLayout>
