--- a/app/src/main/res/layout/listrow_details.xml
+++ b/app/src/main/res/layout/listrow_details.xml
@@ -8,16 +8,21 @@
     android:paddingLeft="40dp"
     tools:context=".PHomePage" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:gravity="center_vertical"
-        android:text="hello_world"
-        android:textSize="18sp"
-        android:textStyle="bold" >
-    </TextView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:text="hello_world"
+            android:textSize="20sp"
+            android:textStyle="bold" >
+        </TextView>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
