--- a/app/src/main/res/layout/activity_consultation_details.xml
+++ b/app/src/main/res/layout/activity_consultation_details.xml
@@ -4,37 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FBFAFA"
     tools:context=".ConsultationDetails">
 
     //lbl= text label
     //txt = textview to actually display the info
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtConsultationDetailsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Consultation Details"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp"
+        android:background="#FBFAFA"
+        android:text="Consultation Details"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/lay1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="25dp">
+        android:layout_below="@+id/txtConsultationDetailsLabel"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblPname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="23dp"
-            android:layout_marginRight="23dp"
+            android:layout_marginRight="24dp"
             android:text="Patient Name: "
-            android:textSize="22dp"/>
+            android:textColor="#050505"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtPFirstname"
@@ -61,9 +68,9 @@
         android:id="@+id/lay2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay1"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblPid"
@@ -72,7 +79,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="ID No: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
 
         <TextView
@@ -88,9 +97,9 @@
         android:id="@+id/lay3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay2"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblCell"
@@ -99,7 +108,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Cell No: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
 
         <TextView
@@ -115,9 +126,9 @@
         android:id="@+id/lay4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay3"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblDname"
@@ -126,7 +137,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Doctor Name: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtDFirstName"
@@ -153,9 +166,9 @@
         android:id="@+id/lay5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay4"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblPracticeID"
@@ -164,7 +177,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Practice ID: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtDPracticeID"
@@ -180,9 +195,9 @@
         android:id="@+id/lay6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay5"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblCase"
@@ -191,7 +206,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Case Information: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtCaseInfo"
@@ -207,9 +224,9 @@
         android:id="@+id/lay7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay6"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblSymptoms"
@@ -218,7 +235,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Symptoms: "
-            android:textSize="22dp"/>
+            android:textColor="#040303"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtSymptoms"
@@ -234,9 +253,9 @@
         android:id="@+id/lay8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay7"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblDiagn"
@@ -245,7 +264,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Diagnosis: "
-            android:textSize="22dp"/>
+            android:textColor="#040303"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtDiagnosis"
@@ -261,9 +282,9 @@
         android:id="@+id/lay9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/lay8"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblDate"
@@ -272,7 +293,9 @@
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:text="Date: "
-            android:textSize="22dp"/>
+            android:textColor="#040404"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtDate"
@@ -283,8 +306,6 @@
 
 
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
