--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -49,10 +49,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:text="Doctor Details"
-                android:textSize="24sp"
+                android:textSize="30sp"
                 android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/gradStop"
                 />
 
             <LinearLayout
