--- a/app/src/main/res/layout/listrow_details.xml
+++ b/app/src/main/res/layout/listrow_details.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -20,7 +21,8 @@
             android:gravity="center_vertical"
             android:text="hello_world"
             android:textSize="20sp"
-            android:textStyle="bold" >
+            android:textStyle="bold"
+            >
         </TextView>
     </RelativeLayout>
 
