--- a/app/src/main/res/layout/activity_p_home_page.xml
+++ b/app/src/main/res/layout/activity_p_home_page.xml
@@ -19,6 +19,7 @@
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rectangle_border"
             android:layout_below="@+id/datePicker">
         </ExpandableListView>
 
